FLY wire David/review/SALDEV-1427-rereview-2026-09-08/force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Effective_EndDate__c.field-meta.xml
<CustomField>
    <fullName>Effective_EndDate__c</fullName>
    <description>Maps the EndDate on QL Group.</description>
    <formula>SBQQ__EndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Maps the EndDate on QL Group..</inlineHelpText>
    <label>Effective EndDate</label>
    <type>Date</type>
</CustomField>