FLY wire David/review/SALDEV-1427-rereview-2026-09-08/force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <description>Maps the StartDate on the QL Group Header</description>
    <formula>SBQQ__StartDate__c</formula>
    <inlineHelpText>Maps the StartDate on the QL Group Header</inlineHelpText>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>