FLY wire David/review/SALDEV-1427-rereview-2026-09-08/force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/RampUp_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>RampUp_Group_Id__c</fullName>
    <description>To Save the Group Id of Ramped Up  Group</description>
    <inlineHelpText>To Save the Group Id of Ramped Up  Group</inlineHelpText>
    <label>RampUp Group Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>