FLY wire David/review/SALDEV-1427-rereview-2026-09-08/force-app/main/default/objects/SBQQ__QuoteLineGroup__c/validationRules/Lock_Allow_Product_Ramping_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Allow_Product_Ramping_Field</fullName>
    <active>false</active>
    <description>Prevent Editing Allow Product Ramping on Cloned Groups</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(SBQQ__Source__c)),
    ISCHANGED(Allow_Product_Ramping__c),
    PRIORVALUE(Allow_Product_Ramping__c) = TRUE,
    Allow_Product_Ramping__c = FALSE
)</errorConditionFormula>
    <errorMessage>Allow Product Ramping cannot be modified on a cloned group</errorMessage>
</ValidationRule>